<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:textSize="25sp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>
    
	<EditText
	    android:id="@+id/loginUsername"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"
	    android:layout_margin="10dp"
	    android:hint="@string/login_username"
	    android:layout_gravity="center"
	    android:inputType="text"/>
	
	<EditText
	    android:id="@+id/loginPassword"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:layout_margin="10dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/login_password"
	    android:inputType="textPassword"/>
	
	<Button
	    android:id="@+id/loginButton"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:padding="10dp"
	    android:layout_gravity="center"
	    android:text="@string/login_button"/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:layout_gravity="center"
	    android:text="@string/or"/>
	
	<Button
	    android:id="@+id/goToRegisterButton"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:padding="10dp"
	    android:layout_gravity="center"
	    android:text="@string/goto_register"/>

</LinearLayout>
