<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemScreenScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dip">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:id="@+id/r_title"
        android:textSize="25sp"/>
    
	<TextView 
	    android:id="@+id/register_title"
	    android:text="@string/register_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_below="@id/r_title"
	    android:textStyle="bold|italic"
	    android:textSize="17sp"
	    android:padding="10dp"
	    />

	
	<EditText
	    android:layout_below="@id/register_title"
	    android:inputType="textEmailAddress"
	    android:layout_centerInParent="true"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:hint="@string/email_hint"
	    android:layout_margin="5dp"
		android:id="@+id/email"/>
	
	<EditText 
	    android:layout_below="@id/email"
	    android:hint="@string/username_hint"
	    android:inputType="textNoSuggestions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_margin="10dp"
	    android:id="@+id/username"
	    />
	
	<EditText
	    android:layout_below="@id/username"
	    android:hint="@string/password_hint"
	    android:layout_centerInParent="true"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:inputType="textPassword"
	    android:id="@+id/password"
	    android:layout_margin="5dp"
	    />
	
	<EditText
	    android:layout_below="@id/password"
	    android:layout_centerInParent="true"
	    android:hint="@string/confirm_hint"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:layout_margin="5dp"
	    android:id="@+id/confirm"
	    />
	
	<Button
	    android:hint="@string/register_button"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_width="wrap_content"
	    android:id="@+id/registerButton"
	    android:layout_margin="10dp"
	    android:layout_below="@id/confirm"/>
	
	<TextView
	    android:layout_below="@id/registerButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:text="@string/or"
	    android:padding="5dp"
	    android:id="@+id/or"
	    />
	
	<Button
	    android:id="@+id/gotoLoginButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:hint="@string/goto_login"
	    android:layout_below="@id/or"
	    android:layout_margin="10dp"
	    />

</RelativeLayout>
</ScrollView>
