<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:text="@string/main_menu_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"/>
    
    <Button
        android:text="@string/report_lost_item"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/reportLostItem"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    
    <Button
        android:text="@string/report_found_item"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/reportFoundItem"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    
    <Button
        android:text="@string/recent_reports"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/recentReports"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/my_profile"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/myProfile"
        android:padding="10dp"/>
    
    <Button
        android:text="@string/search_items_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/searchItems"
        android:layout_margin="10dp"
        android:padding="10dp"/>

</LinearLayout>
