<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >
    
    <ImageView 
        android:id="@+id/recentReportImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="6dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ic_launcher"/>
    
    <TextView 
        android:id="@+id/recentReportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/recentReportImage"
        android:singleLine="true"
        android:textStyle="bold"
        android:text="@string/item_name"
        android:textSize="16sp"/>
    
    <TextView
        android:id="@+id/recentReportStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textStyle="italic"
        android:text="@string/item_status"
        android:layout_marginRight="6dp"
        android:textSize="12.5sp"/>
    
    <TextView
        android:id="@+id/recentReportOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:text="@string/edit_user_name"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/recentReportOwner"
        android:layout_alignParentBottom="true"
        android:textStyle="normal"
        android:layout_marginRight="15dp"
        android:text="@string/owner_title"/>
</RelativeLayout>
