<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/user_name"
	    android:layout_gravity="center_horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:textSize="15sp"
	    android:text="@string/hello_world"/>
	
	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
	<ImageButton
	    android:contentDescription="@string/hello_world"
	    android:layout_height="match_parent"
	    android:id="@+id/editProfileButton"
	    android:src="@drawable/ic_launcher"
	    android:layout_marginLeft="5dp"
	    android:layout_marginTop="5dp"
	    android:layout_weight="0.70"
	    android:layout_width="0dp"/>
	
	<LinearLayout
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_width="0dp"
	    android:layout_weight="1">
	    
	    <TextView
        	android:layout_width="fill_parent"
        	android:paddingTop="10dp"
        	android:paddingLeft="10dp"
        	android:layout_height="wrap_content"
       		android:text="@string/username_title"
       		android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/user_username"
        	android:layout_width="fill_parent"
        	android:paddingTop="5dp"
        	android:paddingLeft="10dp"
        	android:layout_height="wrap_content"
        	android:text="@string/hello_world" />
	    
	    <TextView
	        android:textStyle="bold"
        	android:layout_width="fill_parent"
        	android:paddingTop="10dp"
        	android:paddingLeft="10dp"
        	android:layout_height="wrap_content"
        	android:text="@string/email_title" />
	    
	    <TextView 
	        android:id="@+id/user_email"
        	android:layout_width="fill_parent"
        	android:paddingTop="5dp"
        	android:paddingLeft="10dp"
        	android:layout_height="wrap_content"
        	android:text="@string/hello_world" />
	    
	</LinearLayout>
   
</LinearLayout>

	<TextView
	    android:id="@+id/edit_profile_hint_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_profile_hint"
	    android:textStyle="italic"
	    android:textColor="#0000FF"
	    android:layout_marginLeft="12dp"/>

	<TextView
	        android:layout_width="fill_parent"
	        android:paddingTop="10dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:text="@string/address_title"/>
	
	<TextView
	    android:id="@+id/user_address"
	    android:layout_width="fill_parent"
	    android:paddingTop="10dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/hello_world"/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:paddingTop="10dp"
	    android:layout_gravity="center_horizontal"
	    android:layout_height="wrap_content"
	    android:text="@string/phone_title"
	    android:textStyle="bold"/>
	
	<TextView
	    android:id="@+id/userPhoneNumber"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:layout_height="wrap_content"
	    android:text="@string/hello_world"/>
	
	<Button
	    android:id="@+id/myItemsButton"
	    android:padding="20dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/view_my_items"/>
	
	<Button 
	    android:id="@+id/mainMenuBackButton"
	    android:padding="20dp"
	    android:layout_gravity="center_horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/main_menu_back_button"/>
	
</LinearLayout>
